:bug: fixed wrong font in opening hours

--- a/src/styles/components/_OpeningHours.scss
+++ b/src/styles/components/_OpeningHours.scss
@@ -1,6 +1,5 @@
 .OpeningHours {
   @include spacing('md', margin-top);
   @include font-size('h3');
-  font-style: normal;
   text-transform: uppercase;
 }
